now optionally sends all metric data to Kafka

--- a/cluster-example/cluster1/cluster1-redis-journal-kafka.conf
+++ b/cluster-example/cluster1/cluster1-redis-journal-kafka.conf
@@ -56,6 +56,7 @@ atlas {
     atlascluster {
       number-of-shards = 4
       retain-minutes = 120
+      kafka-enabled = on
       cluster = [
         {
           name = "publish"
@@ -240,11 +241,11 @@ cluster-mailbox {
 }
 
 # Eager initialize persistence
-akka {
-  extensions = [
-    "akka.persistence.Persistence"
-  ]
-}
+#akka {
+#  extensions = [
+#    "akka.persistence.Persistence"
+#  ]
+#}
 
 
 # eager start journal and snapshot
@@ -256,12 +257,12 @@ akka {
     journal {
       plugin = "akka-persistence-redis.journal"
       # eager start the journal
-      auto-start-journals = [ "akka-persistence-redis.journal" ]
+      #auto-start-journals = [ "akka-persistence-redis.journal" ]
     }
     snapshot-store {
       plugin = "akka-persistence-redis.snapshot"
       # eager start the snapshot store
-      auto-start-snapshot-stores = [ "akka-persistence-redis.snapshot" ]
+      #auto-start-snapshot-stores = [ "akka-persistence-redis.snapshot" ]
     }
   }
 }
@@ -288,3 +289,26 @@ redis {
 #  sentinel-master = "mymaster"  //master name
 #  sentinels = [{host :"localhost", port: 26379}] // list of sentinel addresses
 #}
+
+akka.kafka.producer {
+  # Tuning parameter of how many sends that can run in parallel.
+  parallelism = 100
+
+  # How long to wait for `KafkaProducer.close`
+  close-timeout = 60s
+
+  # Fully qualified config path which holds the dispatcher configuration
+  # to be used by the producer stages. Some blocking may occur.
+  # When this value is empty, the dispatcher configured for the stream
+  # will be used.
+  use-dispatcher = "akka.kafka.default-dispatcher"
+
+  # Properties defined by org.apache.kafka.clients.producer.ProducerConfig
+  # can be defined in this configuration section.
+  kafka-clients {
+    bootstrap.servers = "127.0.0.1:9092"
+
+    #client.id = "0" # DO NOT SET THIS
+    acks = 0
+  }
+}
