--- a/cluster-example/cluster2/cluster2-redis-journal-kafka.conf
+++ b/cluster-example/cluster2/cluster2-redis-journal-kafka.conf
@@ -56,6 +56,7 @@ atlas {
     atlascluster {
       number-of-shards = 4
       retain-minutes = 120
+      kafka-enabled = on
       cluster = [
         {
           name = "publish"
@@ -91,7 +92,7 @@ atlas {
       "com.netflix.atlas.akka.ConfigApi",
       "com.netflix.atlas.akka.StaticPages"
     ]
-    port = 7101
+    port = 8101
   }
 }
 
@@ -202,7 +203,7 @@ akka {
     log-remote-lifecycle-events = off
     netty.tcp {
       hostname = "127.0.0.1"
-      port = 2552
+      port = 2553
     }
   }
 
@@ -246,11 +247,6 @@ akka {
   ]
 }
 
-
-# eager start journal and snapshot
-#akka.persistence.journal.auto-start-journals = [ "akka-persistence-redis.journal" ]
-#akka.persistence.snapshot-store.auto-start-snapshot-stores = [ "akka-persistence-redis.snapshot" ]
-
 akka {
   persistence {
     journal {
@@ -288,3 +284,26 @@ redis {
 #  sentinel-master = "mymaster"  //master name
 #  sentinels = [{host :"localhost", port: 26379}] // list of sentinel addresses
 #}
+
+akka.kafka.producer {
+  # Tuning parameter of how many sends that can run in parallel.
+  parallelism = 100
+
+  # How long to wait for `KafkaProducer.close`
+  close-timeout = 60s
+
+  # Fully qualified config path which holds the dispatcher configuration
+  # to be used by the producer stages. Some blocking may occur.
+  # When this value is empty, the dispatcher configured for the stream
+  # will be used.
+  use-dispatcher = "akka.kafka.default-dispatcher"
+
+  # Properties defined by org.apache.kafka.clients.producer.ProducerConfig
+  # can be defined in this configuration section.
+  kafka-clients {
+    bootstrap.servers = "127.0.0.1:9092"
+
+    #client.id = "0" # DO NOT SET THIS
+    acks = 0
+  }
+}
