add cassandra support, kafka topics now configurable

--- a/cluster-example/cluster1/cluster1-cassandra-journal.conf
+++ b/cluster-example/cluster1/cluster1-cassandra-journal.conf
@@ -55,8 +55,8 @@ atlas {
   akka {
     atlascluster {
       number-of-shards = 4
-      retain-minutes = 120
       kafka-enabled = off
+      retain-minutes = 120
       cluster = [
         {
           name = "publish"
@@ -75,13 +75,13 @@ atlas {
     #
     # Default config will load a LocalDatabaseActor and DeadLetterStatsActor
     # clear out the list and just add in DeadLetterStatsActor (may be able to drop it too)
-    # actors = []
-    actors = [
-      {
-        name = "deadLetterStats"
-        class = "com.netflix.atlas.akka.DeadLetterStatsActor"
-      }
-    ]
+    actors = []
+    #actors = [
+    #  {
+    #    name = "deadLetterStats"
+    #    class = "com.netflix.atlas.akka.DeadLetterStatsActor"
+    #  }
+    #]
 
     api-endpoints = [
       "com.netflix.atlas.webapi.PublishApi",
@@ -102,7 +102,6 @@ akka.actor.debug.receive = on
 akka.actor.debug.autoreceive = on
 akka.actor.debug.event-stream = on
 akka.actor.debug.unhandled = on
-
 
 akka {
   actor {
@@ -210,8 +209,8 @@ akka {
   # See http://doc.akka.io/docs/akka/snapshot/scala/cluster-sharding.html
   cluster {
     sharding {
-       rebalance-interval = 30 s
-       remember-entities = off
+       rebalance-interval = 10 s
+       remember-entities = on
        # Setting for the default shard allocation strategy
        least-shard-allocation-strategy {
          # Threshold of how large the difference between most and least number of
@@ -228,6 +227,7 @@ akka {
     roles = [ "backend" ]
     seed-nodes = [
       "akka.tcp://ClusterService@127.0.0.1:2552"
+      "akka.tcp://ClusterService@127.0.0.1:2553"
     ]
 
     #auto-down-unreachable-after = 10s
@@ -238,12 +238,6 @@ cluster-mailbox {
   mailbox-type = "com.netflix.atlas.akka.ClusterMailbox"
   path-pattern = ${atlas.akka.path-pattern}
 }
-
-akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
-akka.persistence.journal.leveldb.dir = "target/journal"
-
-akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-akka.persistence.snapshot-store.local.dir = "target/snapshots"
 
 atlas {
   servo {
@@ -260,4 +254,41 @@ atlas {
     # Where to write the files
     fileObserverDirectory = "servo-out"
   }
+}
+
+atlas.akka.atlascluster {
+  kafka-topic-name = "atlas-metrics"
+  kafka-metadata-max-age-ms = 100000
+}
+
+akka.persistence.journal.auto-start-journals = [ "akka-persistence-cassandra-journal" ]
+akka.persistence.snapshot-store.auto-start-snapshot-stores = [ "akka-persistence-cassandra-snapshot" ]
+
+akka {
+  persistence {
+    journal {
+      plugin = "akka-persistence-cassandra-journal"
+      # eager start the journal
+      #auto-start-journals = [ "akka-persistence-cassandra-journal" ]
+    }
+    snapshot-store {
+      plugin = "akka-persistence-cassandra-snapshot"
+      # eager start the snapshot store
+      #auto-start-snapshot-stores = [ "akka-persistence-cassandra-snapshot" ]
+    }
+  }
+}
+akka-persistence-cassandra-journal = ${cassandra-journal}
+akka-persistence-cassandra-journal {
+    class = "akka.persistence.cassandra.journal.CassandraJournal"
+    contact-points = [
+      127.0.0.1
+    ]
+}
+akka-persistence-cassandra-snapshot = ${cassandra-snapshot-store}
+akka-persistence-cassandra-snapshot {
+    class = "akka.persistence.cassandra.snapshot.CassandraSnapshotStore"
+    contact-points = [
+      127.0.0.1
+    ]
 }
